  * pg_createcluster: Do not suppress initdb output, and use pg_lsclusters to
    show created cluster info.
  * pg_ctlcluster: Suppress "Redirecting to systemctl message".
  * Symlink /usr/bin/pg_receivewal to pg_wrapper.
  * PgCommon.pm: Include postgresql.conf in cluster_info and remove variables
    directly copied from config; adjust callers.
  * postgresql-server-dev-all: dh_make_pgxs: Template mechanism for new
    Debian packages based on PGXS Makefiles.

 -- Christoph Berg <myon@debian.org>  Sat, 15 Apr 2017 18:56:38 +0200

postgresql-common (181) unstable; urgency=medium

  * debian/postgresql-common.config: Fix deprecation warning debconf message
    to use a numerical comparison on the version number.
  * pg_buildext: Fix to use a numerical comparison on the version number.
  * pg_buildext.pod: Drop outdated PG_VIRTUALENV_UNSHARE=-n documentation.
  * pgdg/apt.postgresql.org.sh: Add known distributions.
  * Updated Danish debconf translation by Joe Dalton, thanks!
    (Closes: #856787)

 -- Christoph Berg <myon@debian.org>  Sat, 15 Apr 2017 18:56:38 +0200

postgresql-common (180) unstable; urgency=medium

  * supported-versions: Retire 9.1 on apt.postgresql.org.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 09 Feb 2017 15:30:23 +0100

postgresql-common (179) unstable; urgency=medium

  * Catch all pg_ctl output by redirecting it to /var/log/postgresql.
    (Closes: #830485)
  * Dump locale environment variables if setlocale fails.
    (Closes: #848869)
  * Set default log_line_prefix to '%m [%p] %q%u@%d ' to match upstream
    moving to '%m [%p] ' in PostgreSQL 10.
  * Support include_dir in read_conf_file. Patch by Andreas Dewes, thanks!
  * Support adding include directives to the new postgresql.conf from
    createcluster.conf; harness directives with an "add_" prefix, e.g.
    "add_include_dir".
  * Import new apt.postgresql.org key.
  * Support 9.6 for jessie-backports.

 -- Christoph Berg <myon@debian.org>  Tue, 24 Jan 2017 23:03:12 +0100