@@ -15,6 +15,8 @@ postgresql-common (182) UNRELEASED; urgency=medium
   * Symlink /usr/bin/pg_receivewal to pg_wrapper.
   * PgCommon.pm: Include postgresql.conf in cluster_info and remove variables
     directly copied from config; adjust callers.
+  * PgCommon.pm: Allow more characters in unquoted config values.
+    Spotted by Fabien Coelho, merci!
   * postgresql-server-dev-all: dh_make_pgxs: Template mechanism for new
     Debian packages based on PGXS Makefiles.
 
